# Poker

./: CMakeLists.txt  POker.sln  POker.vcxproj  POker.vcxproj.filters  Poker.depend  Poker.layout  handGeneration.cpp  main.cpp
Debug/: POker.exe.recipe  POker.ilk  POker.vcxproj.FileListAbsolute.txt
Debug/POker.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  POker.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
include/: Card.h  JeuEssai.h
src/: Card.cpp  ComparaisonMain.cpp  JeuEssai.cpp  JeuEssai.h
